include/dss_capi.h

    /*
    Array of strings with all PVSystem names
    */
    DSS_CAPI_DLL void PVSystems_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as PVSystems_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void PVSystems_Get_AllNames_GR(void);
    /*
    Array of PVSYSTEM energy meter register names
    */
    DSS_CAPI_DLL void PVSystems_Get_RegisterNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as PVSystems_Get_RegisterNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void PVSystems_Get_RegisterNames_GR(void);
    /*
    Array of doubles containing values in PVSystem registers.
    */
    DSS_CAPI_DLL void PVSystems_Get_RegisterValues(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as PVSystems_Get_RegisterValues but using the global buffer interface for results
    */
    DSS_CAPI_DLL void PVSystems_Get_RegisterValues_GR(void);
    /*
    Set first PVSystem active; returns 0 if none.
    */
    DSS_CAPI_DLL int32_t PVSystems_Get_First(void);
    /*
    Sets next PVSystem active; returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t PVSystems_Get_Next(void);
    /*
    Number of PVSystems
    */
    DSS_CAPI_DLL int32_t PVSystems_Get_Count(void);
    /*
    Get/set active PVSystem by index;  1..Count
    */
    DSS_CAPI_DLL int32_t PVSystems_Get_idx(void);
    /*
    Get/Set Active PVSystem by index:  1.. Count
    */
    DSS_CAPI_DLL void PVSystems_Set_idx(int32_t Value);
    /*
    Get the name of the active PVSystem
    */
    DSS_CAPI_DLL char* PVSystems_Get_Name(void);
    /*
    Set the name of the active PVSystem
    */
    DSS_CAPI_DLL void PVSystems_Set_Name(char* Value);
    /*
    Get the present value of the Irradiance property in W/sq-m
    */
    DSS_CAPI_DLL double PVSystems_Get_Irradiance(void);
    /*
    Set the present Irradiance value in W/sq-m
    */
    DSS_CAPI_DLL void PVSystems_Set_Irradiance(double Value);
    /*
    Get kvar value
    */
    DSS_CAPI_DLL double PVSystems_Get_kvar(void);
    /*
    Get Rated kVA of the PVSystem
    */
    DSS_CAPI_DLL double PVSystems_Get_kVArated(void);
    /*
    get kW output
    */
    DSS_CAPI_DLL double PVSystems_Get_kW(void);
    /*
    Get Power factor
    */
    DSS_CAPI_DLL double PVSystems_Get_PF(void);
    /*
    Set kva rated
    */
    DSS_CAPI_DLL void PVSystems_Set_kVArated(double Value);
    /*
    Set PF
    */
    DSS_CAPI_DLL void PVSystems_Set_PF(double Value);
    /*
    Set kvar output value
    */
    DSS_CAPI_DLL void PVSystems_Set_kvar(double Value);
    /*
    Name of the dispatch shape to use for daily simulations. Must be previously
    defined as a Loadshape object of 24 hrs, typically. In the default dispatch
    mode, the PVSystem element uses this loadshape to trigger State changes.
    */
    DSS_CAPI_DLL char* PVSystems_Get_daily(void);
    DSS_CAPI_DLL void PVSystems_Set_daily(char* Value);
    /*
    Name of the load shape to use for duty cycle dispatch simulations such as
    for solar ramp rate studies. Must be previously defined as a Loadshape
    object. Typically would have time intervals of 1-5 seconds.
    */
    DSS_CAPI_DLL char* PVSystems_Get_duty(void);
    DSS_CAPI_DLL void PVSystems_Set_duty(char* Value);
    /*
    Dispatch shape to use for yearly simulations. Must be previously defined
    as a Loadshape object. If this is not specified, the Daily dispatch shape,
    if any, is repeated during Yearly solution modes. In the default dispatch
    mode, the PVSystem element uses this loadshape to trigger State changes.
    */
    DSS_CAPI_DLL char* PVSystems_Get_yearly(void);
    DSS_CAPI_DLL void PVSystems_Set_yearly(char* Value);
    /*
    Temperature shape to use for daily simulations. Must be previously defined
    as a TShape object of 24 hrs, typically. The PVSystem element uses this
    TShape to determine the Pmpp from the Pmpp vs T curve. Units must agree
    with the Pmpp vs T curve.
    */
    DSS_CAPI_DLL char* PVSystems_Get_Tdaily(void);
    DSS_CAPI_DLL void PVSystems_Set_Tdaily(char* Value);
    /*
    Temperature shape to use for duty cycle dispatch simulations such as for
    solar ramp rate studies. Must be previously defined as a TShape object.
    Typically would have time intervals of 1-5 seconds. Designate the number
    of points to solve using the Set Number=xxxx command. If there are fewer
    points in the actual shape, the shape is assumed to repeat. The PVSystem
    model uses this TShape to determine the Pmpp from the Pmpp vs T curve.
    Units must agree with the Pmpp vs T curve.
    */
    DSS_CAPI_DLL char* PVSystems_Get_Tduty(void);
    DSS_CAPI_DLL void PVSystems_Set_Tduty(char* Value);
    /*
    Temperature shape to use for yearly simulations. Must be previously defined
    as a TShape object. If this is not specified, the Daily dispatch shape, if
    any, is repeated during Yearly solution modes. The PVSystem element uses
    this TShape to determine the Pmpp from the Pmpp vs T curve. Units must
    agree with the Pmpp vs T curve.
    */
    DSS_CAPI_DLL char* PVSystems_Get_Tyearly(void);
    DSS_CAPI_DLL void PVSystems_Set_Tyearly(char* Value);
    
    /*
    Gets/sets the rated max power of the PV array for 1.0 kW/sq-m irradiance and a user-selected array temperature of the active PVSystem.
    */
    DSS_CAPI_DLL double PVSystems_Get_Pmpp(void);
    DSS_CAPI_DLL void PVSystems_Set_Pmpp(double Value);
    /*
    Returns the current irradiance value for the active PVSystem. Use it to 
    know what's the current irradiance value for the PV during a simulation.
    */
    DSS_CAPI_DLL double PVSystems_Get_IrradianceNow(void);